# signal-purple

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_LICENSES.md  release-please-config.json  rust-toolchain.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/maintainer/: context.md  contributors.md  decisions.md  patterns.md  runs.md  standing-rules.md
.github/maintainer/index/: README.md
.github/maintainer/notes/: README.md  issue-3.md  issue-5.md  pr-1.md  pr-10.md  pr-11.md  pr-4.md  pr-6.md  pr-9.md
.github/maintainer/work/: README.md
.github/release/: Dockerfile  syft.yaml
.github/workflows/: ci.yml  dependency-review.yml  release-artifacts.yml  release-please.yml
data/: io.github.adrighem.signal-purple.metainfo.xml
data/icons/22/: signal-purple.png.license
debian/: changelog  control  copyright  rules
debian/source/: options
docs/: architecture.md  compatibility.md  debian-packaging.md  dependency-policy.md  development.md  licensing.md  live-validation.md  release-checklist.md  release-process.md  security-model.md  troubleshooting.md
docs/adr/: 0001-owned-polling-abi.md  0002-linked-device-first.md  0003-encrypted-storage.md
include/: signal_core.h
keys/: release-signing-key.asc
rust/signal-core/: Cargo.toml
rust/signal-core/src/: backend.rs  event.rs  ffi.rs  lib.rs
scripts/: build-release-artifacts.sh  generate-vendor-copyright.py  make-source-archive.sh  normalize-spdx.py  smoke-test-release-package.sh  write-release-checksums.sh
src/: blist_sync.c  blist_sync.h  connection.c  contact_sync.c  contact_sync.h  group_sync.c  group_sync.h  inline_image.c  inline_image.h  plugin.c  signal_purple.h  util.c
tests/: plugin_probe.c  test_contact_sync.c  test_inline_image.c  test_make_source_archive.sh  test_release_artifacts.sh  test_util.c
