# SPDX-License-Identifier: AGPL-3.0-only
[package]
name = "signal-core"
version = "0.1.0" # x-release-please-version
edition = "2024"
rust-version = "1.94"
license = "AGPL-3.0-only"
description = "Presage-backed protocol core for signal-purple"
repository = "https://github.com/adrighem/signal-purple"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures = "0.3.31"
hex = "0.4.3"
png = "0.18.0"
presage = { git = "https://github.com/whisperfish/presage.git", rev = "63482efd0cbdc0780baf0650517c7d55f1cac05d", default-features = false }
presage-store-sqlite = { git = "https://github.com/whisperfish/presage.git", rev = "63482efd0cbdc0780baf0650517c7d55f1cac05d" }
qrcode = { version = "0.14.1", default-features = false }
tokio = { version = "1.48.0", features = ["rt", "sync", "time"] }
tracing = { version = "0.1.44", default-features = false, features = ["max_level_warn"] }
zeroize = "1.8.2"

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek", tag = "signal-curve25519-4.1.3" }
libsqlite3-sys = { version = "0.36.0", git = "https://github.com/whisperfish/rusqlite", rev = "2a42b3354c9194700d08aa070f70a131a470e7dc" }

[profile.release]
debug = 1
strip = false
