# SPDX-License-Identifier: AGPL-3.0-only
[package]
name = "signal-core"
version = "0.2.2" # x-release-please-version
edition = "2024"
rust-version = "1.94"
license = "AGPL-3.0-only"
description = "Presage-backed protocol core for signal-purple"
repository = "https://github.com/adrighem/signal-purple"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures = "0.3.31"
hex = "0.4.3"
png = "0.18.0"
presage = { git = "https://github.com/adrighem/presage.git", rev = "5e584595b3723e6904a09246deaa830b93bbae7b", default-features = false }
presage-store-sqlite = { git = "https://github.com/adrighem/presage.git", rev = "5e584595b3723e6904a09246deaa830b93bbae7b" }
qrcode = { version = "0.14.1", default-features = false }
reqwest-websocket = { version = "0.4.4", default-features = false }
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["rt", "sync", "time"] }
tracing = { version = "0.1.44", default-features = false, features = ["max_level_warn"] }
zeroize = "1.8.2"

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek", tag = "signal-curve25519-4.1.3" }
libsqlite3-sys = { version = "0.36.0", git = "https://github.com/whisperfish/rusqlite", rev = "2a42b3354c9194700d08aa070f70a131a470e7dc" }

[profile.release]
debug = 1
strip = false
